Nicked the rest of the course materials... they need going through though, and my GPT stuff wants inserting.

--- a/Python/2 Python Data Structures/2.2 Sets.md
+++ b/Python/2 Python Data Structures/2.2 Sets.md
@@ -1,6 +1,6 @@
 ### 2.2 **Sets**
 
-*Let’s cover sets; they are also a type of collection.
+*Letï¿½s cover sets; they are also a type of collection.
 Sets are a type of collection. This means that like lists and tuples, you
 can input different python types. Unlike lists and tuples they are unordered.
 This means sets do not record element position. Sets only have unique elements.
@@ -13,36 +13,36 @@ You simply use the list as the input to the function set.
 The result will be a list converted to a set. Let's go over an example
 We start off with a list. We input the list to the function set.
 The function set returns a set. Notice how there are no duplicate elements.
-Let’s go over Set Operations; these can be used to change the set.
-Consider the set “A”. Let's represent this set with a circle.
+Letï¿½s go over Set Operations; these can be used to change the set.
+Consider the set ï¿½Aï¿½. Let's represent this set with a circle.
 If you are familiar with sets this can be part of a Venn diagram.
 A Venn diagram is a tool that uses shapes usually to represent sets.
 We can add an item to a set using the add method.
 We just put the set name followed by a dot, then the add method.
 The argument is the new element of the set we would like to add, in this case, "NSYNC".
-The set "A" now has "NSYNC” as an item. If we add the same item twice, nothing will
+The set "A" now has "NSYNCï¿½ as an item. If we add the same item twice, nothing will
 happen as there can be no duplicates in a set.
-Let’s say we would like to remove NSYNC from set A.
+Letï¿½s say we would like to remove NSYNC from set A.
 We can also remove an item from a set using the remove method.
 We just put the set name followed by a dot then the remove method.
 The argument is the element of the set we would like to remove, in this case, "NSYNC".
 After the remove method is applied to the set, set "A" does not contain the item
-"NSYNC”. You can use this method for any item in the set.
+"NSYNCï¿½. You can use this method for any item in the set.
 We can verify if an element is in the set
 using the "in" command as follows. The command checks if the item, in this case,
 "AC/DC" is in the set. If the item is in the set, it returns true.
-If we look for an item that is not in the set, in this case for the item “Who”,
+If we look for an item that is not in the set, in this case for the item ï¿½Whoï¿½,
 as the item is not in the set, we will get a false.
 These are types of mathematical set operations; there are other operations we can do.
 There are lots of useful mathematical operations we can do between sets.
 Let's define the set "album_set_1", we can represent it using a red circle or Venn diagram.
-Similarly, we can define the set "album_set_2”.
+Similarly, we can define the set "album_set_2ï¿½.
 We can also represent it using a blue circle or Venn diagram.
 The Intersection of two sets is a new set containing elements which are in both of those
 sets. It's helpful to use Venn diagrams.
 The two circles that represent the sets combine; the overlap represents the new set.
 As the overlap is comprised of the red circle and blue circle, we define the intersection
-in terms of “and.” In Python, we use the ampersand to find the
+in terms of ï¿½and.ï¿½ In Python, we use the ampersand to find the
 union of two sets. If we overlay the values of the set over the
 circle placing the common elements in the overlapping area, we see the correspondence.
 After applying the Intersection operation, all the items that are not in both sets disappear.
@@ -54,9 +54,277 @@ which contain all the items in both sets. We can find the union of the sets albu
 1 and album_set_2 as follows. The result is a new set that has all the elements
 of album_set_1 and album_set_2. This new set is represented in green.
 Consider the new album set, "album_set_3"; the set contains the elements "AC/DC" and "Back
-in Black”. We can represent this with a Venn diagram,
+in Blackï¿½. We can represent this with a Venn diagram,
 as all the elements in album_set_3 are in album_set_1.
 The circle representing album_set_1 encapsulates the circle representing album_set_3.
 We can check if a set is a subset using the is subset method.
 As album_set_3 is a subset of the album_set_1, the result is true.
 There is a lot more you can do with sets. Check out the lab for more examples.*
+
+
+<p style="text-align:center">
+    <a href="https://skills.network/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01" target="_blank">
+    <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/assets/logos/SN_web_lightmode.png" width="200" alt="Skills Network Logo"  />
+    </a>
+</p>
+
+# Sets in Python
+
+
+Estimated time needed: **20** minutes
+    
+
+## Objectives
+
+After completing this lab you will be able to:
+
+* Work with sets in Python, including operations and logic operations.
+
+<h2>Table of Contents</h2>
+<div class="alert alert-block alert-info" style="margin-top: 20px">
+    <ul>
+        <li>
+            <a href="#set">Sets</a>
+            <ul>
+                <li><a href="content">Set Content</a></li>
+                <li><a href="op">Set Operations</a></li>
+                <li><a href="logic">Sets Logic Operations</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#quiz">Quiz on Sets</a>
+        </li>
+    </ul>
+ 
+</div>
+
+<hr>
+
+<h2 id="set">Sets</h2>
+
+<h3 id="content">Set Content</h3>
+
+A set is a unique collection of objects in Python. You can denote a set with a pair of curly brackets <b>{}</b>. Python will automatically remove duplicate items:
+
+# Create a set
+
+set1 = {"pop", "rock", "soul", "hard rock", "rock", "R&B", "rock", "disco"}
+set1
+The process of mapping is illustrated in the figure:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/SetsUnique.png" width="1100">
+
+ You can also  create a set from a list as follows:
+
+# Convert list to set
+
+album_list = [ "Michael Jackson", "Thriller", 1982, "00:42:19", \
+              "Pop, Rock, R&B", 46.0, 65, "30-Nov-82", None, 10.0]
+album_set = set(album_list)             
+album_set
+Now let us create a set of  genres:
+
+# Convert list to set
+
+music_genres = set(["pop", "pop", "rock", "folk rock", "hard rock", "soul", \
+                    "progressive rock", "soft rock", "R&B", "disco"])
+music_genres
+<h3 id="op">Set Operations</h3> 
+
+Let us go over set operations, as these can be used to change the set. Consider the set <b>A</b>:
+
+# Sample set
+
+A = set(["Thriller", "Back in Black", "AC/DC"])
+A
+ We can add an element to a set using the <code>add()</code> method: 
+
+# Add element to set
+
+A.add("NSYNC")
+A
+ If we add the same element twice, nothing will happen as there can be no duplicates in a set:
+
+# Try to add duplicate element to the set
+
+A.add("NSYNC")
+A
+ We can remove an item from a set using the <code>remove</code> method:
+
+# Remove the element from set
+
+A.remove("NSYNC")
+A
+ We can verify if an element is in the set using the <code>in</code> command:
+
+# Verify if the element is in the set
+
+"AC/DC" in A
+<h3 id="logic">Sets Logic Operations</h3>
+
+Remember that with sets you can check the difference between sets, as well as the symmetric difference, intersection, and union:
+
+ Consider the following two sets:
+
+# Sample Sets
+
+album_set1 = set(["Thriller", 'AC/DC', 'Back in Black'])
+album_set2 = set([ "AC/DC", "Back in Black", "The Dark Side of the Moon"])
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/SetsSamples.png" width="650">
+
+# Print two sets
+
+album_set1, album_set2
+As both sets contain <b>AC/DC</b> and <b>Back in Black</b> we represent these common elements with the intersection of two circles.
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/SetsLogic.png" width="650">
+
+You can find the intersect of two sets as follow using <code>&</code>:
+
+# Find the intersections
+
+intersection = album_set1 & album_set2
+intersection
+You can find all the elements that are only contained in <code>album_set1</code> using the <code>difference</code> method:
+
+# Find the difference in set1 but not set2
+
+album_set1.difference(album_set2)  
+You only need to consider elements in <code>album_set1</code>; all the elements in <code>album_set2</code>, including the intersection, are not included.
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/SetsLeft.png" width="650">
+
+The elements in <code>album_set2</code> but not in <code>album_set1</code> is given by:
+
+album_set2.difference(album_set1)  
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/SetsRight.png" width="650">
+
+You can also find the intersection of <code>album_list1</code> and <code>album_list2</code>, using the <code>intersection</code> method:
+
+# Use intersection method to find the intersection of album_list1 and album_list2
+
+album_set1.intersection(album_set2)   
+ This corresponds to the intersection of the two circles:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/SetsIntersect.png" width="650">
+
+The union corresponds to all the elements in both sets, which is represented by coloring both circles:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/SetsUnion.png" width="650">
+
+ The union is given by:
+
+# Find the union of two sets
+
+album_set1.union(album_set2)
+And you can check if a set is a superset or subset of another set, respectively, like this:
+
+# Check if superset
+
+set(album_set1).issuperset(album_set2)   
+# Check if subset
+
+set(album_set2).issubset(album_set1)     
+Here is an example where <code>issubset()</code> and <code>issuperset()</code> return true:
+
+# Check if subset
+
+set({"Back in Black", "AC/DC"}).issubset(album_set1) 
+# Check if superset
+
+album_set1.issuperset({"Back in Black", "AC/DC"})   
+<hr>
+
+<h2 id="quiz">Quiz on Sets</h2>
+
+Convert the list <code>['rap','house','electronic music', 'rap']</code> to a set:
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+set(['rap','house','electronic music','rap'])
+
+```
+
+</details>
+
+<hr>
+
+Consider the list <code>A = [1, 2, 2, 1]</code> and set <code>B = set([1, 2, 2, 1])</code>, does <code>sum(A) == sum(B)</code>? 
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+A = [1, 2, 2, 1]  
+B = set([1, 2, 2, 1])
+print("the sum of A is:", sum(A))
+print("the sum of B is:", sum(B))
+
+```
+
+</details>
+
+<hr>
+
+Create a new set <code>album_set3</code> that is the union of <code>album_set1</code> and <code>album_set2</code>:
+
+# Write your code below and press Shift+Enter to execute
+
+album_set1 = set(["Thriller", 'AC/DC', 'Back in Black'])
+album_set2 = set([ "AC/DC", "Back in Black", "The Dark Side of the Moon"])
+<details><summary>Click here for the solution</summary>
+
+```python
+album_set3 = album_set1.union(album_set2)
+album_set3
+
+```
+
+</details>
+
+<hr>
+
+Find out if <code>album_set1</code> is a subset of <code>album_set3</code>:
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+album_set1.issubset(album_set3)
+
+```
+
+</details>
+
+<hr>
+<h2>The last exercise!</h2>
+<p>Congratulations, you have completed your first lesson and hands-on lab in Python. 
+<hr>
+
+## Author
+
+<a href="https://www.linkedin.com/in/joseph-s-50398b136/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01" target="_blank">Joseph Santarcangelo</a>
+
+
+## Other contributors
+
+<a href="www.linkedin.com/in/jiahui-mavis-zhou-a4537814a">Mavis Zhou</a>
+
+
+## Change Log
+
+
+|  Date (YYYY-MM-DD) |  Version | Changed By  |  Change Description |
+|---|---|---|---|
+| 2022-01-10  | 2.1  | Malika  | Removed the readme for GitShare|
+| 2020-08-26  | 2.0  | Lavanya | Moved lab to course repo in GitLab |
+|   |   |   |   |
+|   |   |   |   |
+
+
+## <h3 align="center"> Â© IBM Corporation 2020. All rights reserved. <h3/>
