--- a/Python/3 Python Programming Fundamentals (Flow Control)/3.4 Objects and Classes.md
+++ b/Python/3 Python Programming Fundamentals (Flow Control)/3.4 Objects and Classes.md
@@ -9,7 +9,7 @@ For example, we have two types: type one and type two.
 We can have several objects of type one as shown in yellow. Each object is an instance
 of type one. We also have several objects of type two shown
 in green. Each object is an instance of type two.
-Letís do several less abstract examples. Every time we create an Integer, we are creating
+LetÔøΩs do several less abstract examples. Every time we create an Integer, we are creating
 an instance of type integer, or we are creating an integer object.
 In this case, we are creating five instances of type integer or five integer objects.
 Similarly, every time we create a list, we are creating an instance of type list, or
@@ -17,14 +17,14 @@ we are creating a list object. In this case, we are creating five instances
 of type list or five list objects. We can find out the type of an object by using
 the type command. In this case, we have an object of type list.
 We have an object of type integer. We have an object of type string.
-Finally, we have an object of type dictionary. A class or typeís methods are functions
+Finally, we have an object of type dictionary. A class or typeÔøΩs methods are functions
 that every instance of that class or type provides.
-Itís how you interact with the object. We have been using methods all this time,
+ItÔøΩs how you interact with the object. We have been using methods all this time,
 for example, on lists. Sorting is an example of a method that interacts
 with the data in the object. Consider the list Ratings.
 The data is a series of numbers contained within the list.
 The method sort will change the data within the object
-We call the method by adding a period at the end of the objectís name and the methodís
+We call the method by adding a period at the end of the objectÔøΩs name and the methodÔøΩs
 name we would like to call with parenthesis. We have the ratings list represented in orange.
 The data contained in the list is a sequence of numbers.
 We call the sort method. This changes the data contained in the object.
@@ -63,12 +63,12 @@ We also have different objects of class rectangle or type rectangle.
 Let us continue building the circle class in Python.
 We define our class. We then initialize each instance of the class
 with data attributes radius and color using the class constructor.
-The function "in-it" is a constructor. Itís a special function that tells Python you are
+The function "in-it" is a constructor. ItÔøΩs a special function that tells Python you are
 making a new class. There are other special functions in Python
-to make more complex classes. The ëradiusí and ëcolorí parameters
+to make more complex classes. The ÔøΩradiusÔøΩ and ÔøΩcolorÔøΩ parameters
 are used to initialize the radius and color data attributes of the class instance.
-The íselfí parameter refers to the newly created instance of the class.
-The parameters íradiusí and ícolorí can be used in the constructorís body to
+The ÔøΩselfÔøΩ parameter refers to the newly created instance of the class.
+The parameters ÔøΩradiusÔøΩ and ÔøΩcolorÔøΩ can be used in the constructorÔøΩs body to
 access the values passed to the class constructor when the class is constructed.
 We can set the value of the radius and color data attributes to the values passed to the
 constructor method. Similarly, we can define the class rectangle
@@ -89,7 +89,7 @@ attribute directly. Typing the object's name, followed by a dot
 and the data attribute name, and set it equal to the corresponding value.
 We can verify that the color data attribute has changed.
 Usually, in order to change the data in an object we define methods in the class.
-Letís discuss methods. We have seen how data attributes consist of
+LetÔøΩs discuss methods. We have seen how data attributes consist of
 the data defining the objects. Methods are functions that interact and change
 the data attributes, changing or using the data attributes of the object.
 Let's say we would like to change the size of a circle; this involves changing the radius
@@ -101,28 +101,28 @@ radius. Let's see how this part of the code works
 when we create an object and call the add radius method.
 As before, we create an object with the object constructor.
 We pass 2 arguments to the constructor; the radius is set to 2 and the color is set to
-red. In the constructorís body, the data attributes
+red. In the constructorÔøΩs body, the data attributes
 are set. We can use the box analogy to see the current
 state of the object. We call the method by adding a dot followed
 by the method name and parenthesis. In this case, the argument of the function
 is the amount we would like to add. We do not need to worry about the self-parameter
-when calling the methodójust like with the constructor, Python will take care of that
+when calling the methodÔøΩjust like with the constructor, Python will take care of that
 for us. In many cases, there may not be any parameters
-(other than self) specified in the methodís definition, so we donít pass any arguments
+(other than self) specified in the methodÔøΩs definition, so we donÔøΩt pass any arguments
 when calling the function. Internally, the method is called with a value
 of 8 and the proper self object. The method assigns a new value to self.radius.
 This changes the object; in particular, the radius data attribute.
 When we call the add radius method, this changes the object by changing the value of the radius
 data attribute. We can add default values to the parameters
-of a classís constructor. In the labs, we also create the method called
-"Draw Circle.î See the lab for the implementation of draw
+of a classÔøΩs constructor. In the labs, we also create the method called
+"Draw Circle.ÔøΩ See the lab for the implementation of draw
 circle. In the labs, we can create a new object of
 type Circle using the constructor. The color will be red and the radius will
 be 3. We can access the data attribute radius.
-We can access the attribute color. Finally we can use the method ìdraw Circleî
+We can access the attribute color. Finally we can use the method ÔøΩdraw CircleÔøΩ
 to draw the circle. Similarly, we can create a new object of type
 Circle. We can access the data attribute of radius.
-We can access the data attribute color. We can use the method ìdraw circleî to
+We can access the data attribute color. We can use the method ÔøΩdraw circleÔøΩ to
 draw the circle. In summary, we have created an object of class
 Circle called "red circle" with a Radius attribute of 3 and a Color attribute of red.
 We also created an object of class Circle called "blue Circle" with a Radius attribute
@@ -130,14 +130,403 @@ of 10 and a Color attribute of blue. In the lab, we have a similar class for rec
 We can create a new object of type rectangle using the constructor. We can access a data
 attribute of Height. We can also access the data attribute of Width.
 We can do the same for the data attribute of Color.
-We can use the method ìdraw Rectangleî to draw the rectangle.
+We can use the method ÔøΩdraw RectangleÔøΩ to draw the rectangle.
 So we have a class, an object that is a realization or instantiation of that class.
 For example, we can create two objects of class Circle, or two objects of class Rectangle.
-The ìD I Rî function is useful for obtaining the list of data attributes and methods associated
-with a class. The object youíre interested in is passed
-as an argument. The return value is a list of that objectís
+The ÔøΩD I RÔøΩ function is useful for obtaining the list of data attributes and methods associated
+with a class. The object youÔøΩre interested in is passed
+as an argument. The return value is a list of that objectÔøΩs
 data attributes. (The attributes surrounded by underscores
-are for Internal Use and you shouldnít have to worry about them.)
+are for Internal Use and you shouldnÔøΩt have to worry about them.)
 The regular-looking attributes are the ones you should concern yourself with, these are
-the objectís methods and data attributes. There is a lot more you can do with objects
+the objectÔøΩs methods and data attributes. There is a lot more you can do with objects
 in Python. Check python.org for more info.*
+
+<center>
+    <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/IDSNlogo.png" width="300" alt="cognitiveclass.ai logo">
+</center>
+
+# Classes and Objects in Python
+
+Estimated time needed: **40** minutes
+
+## Objectives
+
+After completing this lab you will be able to:
+
+*   Work with classes and objects
+*   Identify and define attributes and methods
+
+<h2>Table of Contents</h2>
+<div class="alert alert-block alert-info" style="margin-top: 20px">
+    <ul>
+        <li>
+            <a href="https://#intro">Introduction to Classes and Objects</a>
+            <ul>
+                <li><a href="https://create/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01">Creating a class</a></li>
+                <li><a href="https://instance/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01">Instances of a Class: Objects and Attributes</a></li>
+                <li><a href="https://method/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01">Methods</a></li>
+            </ul>
+        </li>
+        <li><a href="https://creating/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01">Creating a class</a></li>
+        <li><a href="https://circle/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01">Creating an instance of a class Circle</a></li>
+        <li><a href="https://rect/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01">The Rectangle Class</a></li>
+    </ul>
+
+</div>
+
+<hr>
+
+<h2 id="intro">Introduction to Classes and Objects</h2>
+
+<h3>Creating a Class</h3>
+
+The first step in creating a class is giving it a name. In this notebook, we will create two classes: Circle and Rectangle. We need to determine all the data that make up that class, which we call <em>attributes</em>. Think about this step as creating a blue print that we will use to create objects. In figure 1 we see two classes, Circle and Rectangle. Each has their attributes, which are variables. The class Circle has the attribute radius and color, while the Rectangle class has the attribute height and width. Let‚Äôs use the visual examples of these shapes before we get to the code, as this will help you get accustomed to the vocabulary.
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%203/images/ClassesClass.png" width="500">
+
+<i>Figure 1: Classes circle and rectangle, and each has their own attributes. The class Circle has the attribute radius and colour, the class Rectangle has the attributes height and width.</i>
+
+<h3 id="instance">Instances of a Class: Objects and Attributes</h3>
+
+An instance of an object is the realisation of a class, and in Figure 2 we see three instances of the class circle. We give each object a name: red circle, yellow circle, and green circle. Each object has different attributes, so let's focus on the color attribute for each object.
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%203/images/ClassesObj.png" width="500">
+
+<i>Figure 2: Three instances of the class Circle, or three objects of type Circle.</i>
+
+The colour attribute for the red Circle is the colour red, for the green Circle object the colour attribute is green, and for the yellow Circle the colour attribute is yellow.
+
+<h3 id="method">Methods</h3>
+
+Methods give you a way to change or interact with the object; they are functions that interact with objects. For example, let‚Äôs say we would like to increase the radius of a circle by a specified amount. We can create a method called **add_radius(r)** that increases the radius by **r**. This is shown in figure 3, where after applying the method to the "orange circle object", the radius of the object increases accordingly. The ‚Äúdot‚Äù notation means to apply the method to the object, which is essentially applying a function to the information in the object.
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%203/images/ClassesMethod.png" width="500"> 
+
+<i>Figure 3: Applying the method ‚Äúadd_radius‚Äù to the object orange circle object.</i>
+
+<hr>
+
+<h2 id="creating">Creating a Class</h2>
+
+Now we are going to create a class Circle, but first, we are going to import a library to draw the objects:
+
+# Import the library
+
+import matplotlib.pyplot as plt
+%matplotlib inline  
+The first step in creating your own class is to use the <code>class</code> keyword, then the name of the class as shown in Figure 4. In this course the class parent will always be object:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%203/images/ClassesDefine.png" width="400">
+
+<i>Figure 4: Creating a class Circle.</i>
+
+The next step is a special method called a constructor <code>\__init\_\_</code>, which is used to initialize the object. The inputs are data attributes. The term <code>self</code> contains all the attributes in the set. For example the <code>self.color</code> gives the value of the attribute color and <code>self.radius</code> will give you the radius of the object. We also have the method <code>add_radius()</code> with the parameter <code>r</code>, the method adds the value of <code>r</code> to the attribute radius. To access the radius we use the syntax <code>self.radius</code>. The labeled syntax is summarized in Figure 5:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%203/images/ClassesCircle.png" width="600">
+
+<i>Figure 5: Labeled syntax of the object circle.</i>
+
+The actual object is shown below. We include the method <code>drawCircle</code> to display the image of a circle. We set the default radius to 3 and the default colour to blue:
+
+# Create a class Circle
+
+class Circle(object):
+    
+    # Constructor
+    def __init__(self, radius=3, color='blue'):
+        self.radius = radius
+        self.color = color 
+    
+    # Method
+    def add_radius(self, r):
+        self.radius = self.radius + r
+        return(self.radius)
+    
+    # Method
+    def drawCircle(self):
+        plt.gca().add_patch(plt.Circle((0, 0), radius=self.radius, fc=self.color))
+        plt.axis('scaled')
+        plt.show()  
+<hr>
+
+<h2 id="circle">Creating an instance of a class Circle</h2>
+
+Let‚Äôs create the object <code>RedCircle</code> of type Circle to do the following:
+
+# Create an object RedCircle
+
+RedCircle = Circle(10, 'red')
+We can use the <code>dir</code> command to get a list of the object's methods. Many of them are default Python methods.
+
+# Find out the methods can be used on the object RedCircle
+
+dir(RedCircle)
+We can look at the data attributes of the object:
+
+# Print the object attribute radius
+
+RedCircle.radius
+# Print the object attribute color
+
+RedCircle.color
+We can change the object's data attributes:
+
+# Set the object attribute radius
+
+RedCircle.radius = 1
+RedCircle.radius
+We can draw the object by using the method <code>drawCircle()</code>:
+
+# Call the method drawCircle
+
+RedCircle.drawCircle()
+We can increase the radius of the circle by applying the method <code>add_radius()</code>. Let's increases the radius by 2 and then by 5:
+
+# Use method to change the object attribute radius
+
+print('Radius of object:',RedCircle.radius)
+RedCircle.add_radius(2)
+print('Radius of object of after applying the method add_radius(2):',RedCircle.radius)
+RedCircle.add_radius(5)
+print('Radius of object of after applying the method add_radius(5):',RedCircle.radius)
+Let‚Äôs create a blue circle. As the default colour is blue, all we have to do is specify what the radius is:
+
+# Create a blue circle with a given radius
+
+BlueCircle = Circle(radius=100)
+As before, we can access the attributes of the instance of the class by using the dot notation:
+
+# Print the object attribute radius
+
+BlueCircle.radius
+# Print the object attribute color
+
+BlueCircle.color
+We can draw the object by using the method <code>drawCircle()</code>:
+
+# Call the method drawCircle
+
+BlueCircle.drawCircle()
+Compare the x and y axis of the figure to the figure for <code>RedCircle</code>; they are different.
+
+<hr>
+
+<h2 id="rect">The Rectangle Class</h2>
+
+Let's create a class rectangle with the attributes of height, width, and color. We will only add the method to draw the rectangle object:
+
+# Create a new Rectangle class for creating a rectangle object
+
+class Rectangle(object):
+    
+    # Constructor
+    def __init__(self, width=2, height=3, color='r'):
+        self.height = height 
+        self.width = width
+        self.color = color
+    
+    # Method
+    def drawRectangle(self):
+        plt.gca().add_patch(plt.Rectangle((0, 0), self.width, self.height ,fc=self.color))
+        plt.axis('scaled')
+        plt.show()
+        
+Let‚Äôs create the object <code>SkinnyBlueRectangle</code> of type Rectangle. Its width will be 2 and height will be 3, and the color will be blue:
+
+# Create a new object rectangle
+
+SkinnyBlueRectangle = Rectangle(2, 3, 'blue')
+As before we can access the attributes of the instance of the class by using the dot notation:
+
+# Print the object attribute height
+
+SkinnyBlueRectangle.height 
+# Print the object attribute width
+
+SkinnyBlueRectangle.width
+# Print the object attribute color
+
+SkinnyBlueRectangle.color
+We can draw the object:
+
+# Use the drawRectangle method to draw the shape
+
+SkinnyBlueRectangle.drawRectangle()
+Let‚Äôs create the object <code>FatYellowRectangle</code> of type Rectangle:
+
+# Create a new object rectangle
+
+FatYellowRectangle = Rectangle(20, 5, 'yellow')
+We can access the attributes of the instance of the class by using the dot notation:
+
+# Print the object attribute height
+
+FatYellowRectangle.height 
+# Print the object attribute width
+
+FatYellowRectangle.width
+# Print the object attribute color
+
+FatYellowRectangle.color
+We can draw the object:
+
+# Use the drawRectangle method to draw the shape
+
+FatYellowRectangle.drawRectangle()
+<hr>
+
+<center>
+    
+# Scenario: Car dealership's inventory management system
+
+</center>
+
+You are working on a Python program to simulate a car dealership's inventory management system. The system aims to model cars and their attributes accurately.
+
+### Task-1. You are tasked with creating a Python program to represent vehicles using a class. Each car should have attributes for maximum speed and mileage. 
+
+#Type your code here
+<details><summary>Click here for the solution</summary>
+
+```python
+
+class Vehicle:
+    def __init__(self, max_speed, mileage):
+        self.max_speed = max_speed
+        self.mileage = mileage
+        
+```
+
+</details>
+
+### Task-2. Update the class with the default color for all vehicles," white".
+
+#Type your code here
+<details><summary>Click here for the solution</summary>
+
+```python
+
+class Vehicle:
+    color = "white"
+
+    def __init__(self, max_speed, mileage):
+        self.max_speed = max_speed
+        self.mileage = mileage
+        
+```
+
+</details>
+
+### Task-3. Additionally, you need to create methods in the Vehicle class to assign seating capacity to a vehicle. 
+
+#Type your code here
+<details><summary>Click here for the solution</summary>
+
+```python
+
+class Vehicle:
+    color = "white"
+
+    def __init__(self, max_speed, mileage):
+        self.max_speed = max_speed
+        self.mileage = mileage
+        self.seating_capacity = None
+
+    def assign_seating_capacity(self, seating_capacity):
+        self.seating_capacity = seating_capacity
+```
+
+</details>
+
+### Task-4. Create a method to display all the properties of an object of the class. 
+
+#Type your code here
+<details><summary>Click here for the solution</summary>
+
+```python
+class Vehicle:
+    color = "white"
+
+    def __init__(self, max_speed, mileage):
+        self.max_speed = max_speed
+        self.mileage = mileage
+        self.seating_capacity = None
+
+    def assign_seating_capacity(self, seating_capacity):
+        self.seating_capacity = seating_capacity
+
+    def display_properties(self):
+        print("Properties of the Vehicle:")
+        print("Color:", self.color)
+        print("Maximum Speed:", self.max_speed)
+        print("Mileage:", self.mileage)
+        print("Seating Capacity:", self.seating_capacity)
+        
+```
+
+</details>
+
+### Task-5. Additionally, you need to create two objects of the Vehicle class object that should have a max speed of 200kph and mileage of 50000kmpl with five seating capacities, and another car object should have a max speed of 180kph and 75000kmpl with four seating capacities.
+
+#Type your code here
+<details><summary>Click here for the solution</summary>
+
+```python
+class Vehicle:
+    color = "white"
+
+    def __init__(self, max_speed, mileage):
+        self.max_speed = max_speed
+        self.mileage = mileage
+        self.seating_capacity = None
+
+    def assign_seating_capacity(self, seating_capacity):
+        self.seating_capacity = seating_capacity
+
+    def display_properties(self):
+        print("Properties of the Vehicle:")
+        print("Color:", self.color)
+        print("Maximum Speed:", self.max_speed)
+        print("Mileage:", self.mileage)
+        print("Seating Capacity:", self.seating_capacity)
+
+# Creating objects of the Vehicle class
+vehicle1 = Vehicle(200, 50000)
+vehicle1.assign_seating_capacity(5)
+vehicle1.display_properties()
+
+vehicle2 = Vehicle(180, 75000)
+vehicle2.assign_seating_capacity(4)
+vehicle2.display_properties()
+
+```
+
+</details>
+
+<hr>
+<h2>The last exercise!</h2>
+<p>Congratulations, you have completed your first lesson and hands-on lab in Python. 
+<hr>
+
+## Author
+
+<a href="https://www.linkedin.com/in/joseph-s-50398b136/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01">Joseph Santarcangelo</a>
+
+## Other contributors
+
+<a href="https://www.linkedin.com/in/jiahui-mavis-zhou-a4537814a?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01">Mavis Zhou</a>
+
+## Change Log
+
+| Date (YYYY-MM-DD) | Version | Changed By | Change Description                 |
+| ----------------- | ------- | ---------- | ---------------------------------- |
+| 2023-05-16        | 2.2     |Akansha Yadav | updated lab under maintenance   |
+| 2022-01-10        | 2.1     | Malika     | Removed the readme for GitShare    |
+| 2020-08-26        | 2.0     | Lavanya    | Moved lab to course repo in GitLab |
+|                   |         |            |                                    |
+|                   |         |            |                                    |
+
+<hr/>
+
+## <h3 align="center"> ¬© IBM Corporation 2020. All rights reserved. <h3/>
