--- a/Python/2 Python Data Structures/2.1 Lists and Tuples.md
+++ b/Python/2 Python Data Structures/2.1 Lists and Tuples.md
@@ -138,7 +138,856 @@ We can get more info on lists, tuples and many other objects in Python using the
 command.
 Simply pass in the list, tuple or any other Python object.
 See the labs for more things you can do with lists.*
+____
+
+
+
+
 
 **Task 12: Conditionals and Lists**  
 Create a script that generates a list of random numbers (between 1 and 100) of a specified length. Then, use conditionals to categorize the numbers into "even" and "odd" groups. Print the resulting lists.  
 
+<p style="text-align:center">
+    <a href="https://skills.network/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01" target="_blank">
+    <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/assets/logos/SN_web_lightmode.png" width="200" alt="Skills Network Logo"  />
+    </a>
+</p>
+
+# Lists in Python
+
+
+Estimated time needed: **15** minutes
+    
+
+## Objectives
+
+After completing this lab you will be able to:
+
+*  Perform list operations in Python, including indexing, list manipulation, and copy/clone list.
+
+<h2>Table of Contents</h2>
+<div class="alert alert-block alert-info" style="margin-top: 20px">
+    <ul>
+        <li>
+            <a href="#dataset">About the Dataset</a>
+        </li>
+        <li>
+            <a href="#list">Lists</a>
+            <ul>
+                <li><a href="index">Indexing</a></li>
+                <li><a href="content">List Content</a></li>
+                <li><a href="op">List Operations</a></li>
+                <li><a href="co">Copy and Clone List</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#quiz">Quiz on Lists</a>
+        </li>
+    </ul>
+   
+</div>
+
+<hr>
+
+<h2 id="#dataset">About the Dataset</h2>
+
+Imagine you received album recommendations from your friends and compiled all of the recommandations into a table, with specific information about each album.
+
+The table has one row for each movie and several columns:
+
+- **artist** - Name of the artist
+- **album** - Name of the album
+- **released_year** - Year the album was released
+- **length_min_sec** - Length of the album (hours,minutes,seconds)
+- **genre** - Genre of the album
+- **music_recording_sales_millions** - Music recording sales (millions in USD) on [SONG://DATABASE](http://www.song-database.com/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01)
+- **claimed_sales_millions** - Album's claimed sales (millions in USD) on [SONG://DATABASE](http://www.song-database.com/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01)
+- **date_released** - Date on which the album was released
+- **soundtrack** - Indicates if the album is the movie soundtrack (Y) or (N)
+- **rating_of_friends** - Indicates the rating from your friends from 1 to 10
+<br>
+<br>
+
+The dataset can be seen below:
+
+<font size="1">
+<table font-size:xx-small>
+  <tr>
+    <th>Artist</th>
+    <th>Album</th> 
+    <th>Released</th>
+    <th>Length</th>
+    <th>Genre</th> 
+    <th>Music recording sales (millions)</th>
+    <th>Claimed sales (millions)</th>
+    <th>Released</th>
+    <th>Soundtrack</th>
+    <th>Rating (friends)</th>
+  </tr>
+  <tr>
+    <td>Michael Jackson</td>
+    <td>Thriller</td> 
+    <td>1982</td>
+    <td>00:42:19</td>
+    <td>Pop, rock, R&B</td>
+    <td>46</td>
+    <td>65</td>
+    <td>30-Nov-82</td>
+    <td></td>
+    <td>10.0</td>
+  </tr>
+  <tr>
+    <td>AC/DC</td>
+    <td>Back in Black</td> 
+    <td>1980</td>
+    <td>00:42:11</td>
+    <td>Hard rock</td>
+    <td>26.1</td>
+    <td>50</td>
+    <td>25-Jul-80</td>
+    <td></td>
+    <td>8.5</td>
+  </tr>
+    <tr>
+    <td>Pink Floyd</td>
+    <td>The Dark Side of the Moon</td> 
+    <td>1973</td>
+    <td>00:42:49</td>
+    <td>Progressive rock</td>
+    <td>24.2</td>
+    <td>45</td>
+    <td>01-Mar-73</td>
+    <td></td>
+    <td>9.5</td>
+  </tr>
+    <tr>
+    <td>Whitney Houston</td>
+    <td>The Bodyguard</td> 
+    <td>1992</td>
+    <td>00:57:44</td>
+    <td>Soundtrack/R&B, soul, pop</td>
+    <td>26.1</td>
+    <td>50</td>
+    <td>25-Jul-80</td>
+    <td>Y</td>
+    <td>7.0</td>
+  </tr>
+    <tr>
+    <td>Meat Loaf</td>
+    <td>Bat Out of Hell</td> 
+    <td>1977</td>
+    <td>00:46:33</td>
+    <td>Hard rock, progressive rock</td>
+    <td>20.6</td>
+    <td>43</td>
+    <td>21-Oct-77</td>
+    <td></td>
+    <td>7.0</td>
+  </tr>
+    <tr>
+    <td>Eagles</td>
+    <td>Their Greatest Hits (1971-1975)</td> 
+    <td>1976</td>
+    <td>00:43:08</td>
+    <td>Rock, soft rock, folk rock</td>
+    <td>32.2</td>
+    <td>42</td>
+    <td>17-Feb-76</td>
+    <td></td>
+    <td>9.5</td>
+  </tr>
+    <tr>
+    <td>Bee Gees</td>
+    <td>Saturday Night Fever</td> 
+    <td>1977</td>
+    <td>1:15:54</td>
+    <td>Disco</td>
+    <td>20.6</td>
+    <td>40</td>
+    <td>15-Nov-77</td>
+    <td>Y</td>
+    <td>9.0</td>
+  </tr>
+    <tr>
+    <td>Fleetwood Mac</td>
+    <td>Rumours</td> 
+    <td>1977</td>
+    <td>00:40:01</td>
+    <td>Soft rock</td>
+    <td>27.9</td>
+    <td>40</td>
+    <td>04-Feb-77</td>
+    <td></td>
+    <td>9.5</td>
+  </tr>
+</table></font>
+
+<hr>
+
+<h2 id="list">Lists</h2>
+
+<h3 id="index">Indexing</h3>
+
+We are going to take a look at lists in Python. A list is a sequenced collection of different objects such as integers, strings, and even other lists as well. The address of each element within a list is called an <b>index</b>. An index is used to access and refer to items within a list.
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/ListsIndex.png" width="1000">
+
+ To create a list, type the list within square brackets <b>[ ]</b>, with your content inside the parenthesis and separated by commas. Let’s try it!
+
+# Create a list
+
+L = ["Michael Jackson", 10.1, 1982]
+L
+We can use negative and regular indexing with a list:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/ListsNeg.png" width="1000">
+
+# Print the elements on each index
+
+print('the same element using negative and positive indexing:\n Postive:',L[0],
+'\n Negative:' , L[-3]  )
+print('the same element using negative and positive indexing:\n Postive:',L[1],
+'\n Negative:' , L[-2]  )
+print('the same element using negative and positive indexing:\n Postive:',L[2],
+'\n Negative:' , L[-1]  )
+<h3 id="content">List Content</h3>
+
+Lists can contain strings, floats, and integers. We can nest other lists, and we can also nest tuples and other data structures. The same indexing conventions apply for nesting:    
+
+# Sample List
+
+["Michael Jackson", 10.1, 1982, [1, 2], ("A", 1)]
+<h3 id="op">List Operations</h3>
+
+ We can also perform slicing in lists. For example, if we want the last two elements, we use the following command:
+
+# Sample List
+
+L = ["Michael Jackson", 10.1,1982,"MJ",1]
+L
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/ListsSlice.png" width="1000">
+
+# List slicing
+
+L[3:5]
+We can use the method <code>extend</code> to add new elements to the list:
+
+# Use extend to add elements to list
+
+L = [ "Michael Jackson", 10.2]
+L.extend(['pop', 10])
+L
+Another similar method is <code>append</code>. If we apply <code>append</code> instead of <code>extend</code>, we add one element to the list:
+
+# Use append to add elements to list
+
+L = [ "Michael Jackson", 10.2]
+L.append(['pop', 10])
+L
+ Each time we apply a method, the list changes. If we apply <code>extend</code> we add two new elements to the list. The list <code>L</code> is then modified by adding two new elements:
+
+# Use extend to add elements to list
+
+L = [ "Michael Jackson", 10.2]
+L.extend(['pop', 10])
+L
+If we append the list  <code>['a','b']</code> we have one new element consisting of a nested list:
+
+# Use append to add elements to list
+
+L.append(['a','b'])
+L
+As lists are mutable, we can change them. For example, we can change the first element as follows:
+
+# Change the element based on the index
+
+A = ["disco", 10, 1.2]
+print('Before change:', A)
+A[0] = 'hard rock'
+print('After change:', A)
+ We can also delete an element of a list using the <code>del</code> command:
+
+# Delete the element based on the index
+
+print('Before change:', A)
+del(A[0])
+print('After change:', A)
+We can convert a string to a list using <code>split</code>.  For example, the method <code>split</code> translates every group of characters separated by a space into an element in a list:
+
+# Split the string, default is by space
+
+'hard rock'.split()
+We can use the split function to separate strings on a specific character which we call a **delimiter**. We pass the character we would like to split on into the argument, which in this case is a comma.  The result is a list, and each element corresponds to a set of characters that have been separated by a comma: 
+
+# Split the string by comma
+
+'A,B,C,D'.split(',')
+<h3 id="co">Copy and Clone List</h3>
+
+When we set one variable <b>B</b> equal to <b>A</b>, both <b>A</b> and <b>B</b> are referencing the same list in memory:
+
+# Copy (copy by reference) the list A
+
+A = ["hard rock", 10, 1.2]
+B = A
+print('A:', A)
+print('B:', B)
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/ListsRef.png" width="1000" align="center">
+
+Initially, the value of the first element in <b>B</b> is set as "hard rock". If we change the first element in <b>A</b> to <b>"banana"</b>, we get an unexpected side effect.  As <b>A</b> and <b>B</b> are referencing the same list, if we change list <b>A</b>, then list <b>B</b> also changes. If we check the first element of <b>B</b> we get "banana" instead of "hard rock":
+
+# Examine the copy by reference
+
+print('B[0]:', B[0])
+A[0] = "banana"
+print('B[0]:', B[0])
+This is demonstrated in the following figure: 
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/ListsRefGif.gif" width="1000">
+
+You can clone list **A** by using  the following syntax:
+
+# Clone (clone by value) the list A
+
+B = A[:]
+B
+ Variable **B** references a new copy or clone of the original list. This is demonstrated in the following figure:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/ListsVal.gif" width="1000">
+
+Now if you change <b>A</b>, <b>B</b> will not change: 
+
+print('B[0]:', B[0])
+A[0] = "hard rock"
+print('B[0]:', B[0])
+<h2 id="quiz">Quiz on List</h2>
+
+Create a list <code>a_list</code>, with the following elements <code>1</code>, <code>hello</code>, <code>[1,2,3]</code> and <code>True</code>. 
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+a_list = [1, 'hello', [1, 2, 3] , True]
+a_list
+
+```
+
+</details>
+
+Find the value stored at index 1 of <code>a_list</code>.
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+a_list[1]
+
+```
+
+</details>
+
+Retrieve the elements stored at index 1, 2 and 3 of <code>a_list</code>.
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+a_list[1:4]
+
+```
+
+</details>
+
+Concatenate the following lists <code>A = [1, 'a']</code> and <code>B = [2, 1, 'd']</code>:
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+A = [1, 'a'] 
+B = [2, 1, 'd']
+A + B
+
+```
+
+</details>
+
+<hr>
+<h2>The last exercise!</h2>
+<p>Congratulations, you have completed your first lesson and hands-on lab in Python. 
+<hr>
+
+## Author
+
+<a href="https://www.linkedin.com/in/joseph-s-50398b136/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01" target="_blank">Joseph Santarcangelo</a>
+
+
+## Other contributors
+
+<a href="www.linkedin.com/in/jiahui-mavis-zhou-a4537814a">Mavis Zhou</a>
+
+
+## Change Log
+
+
+|  Date (YYYY-MM-DD) |  Version | Changed By  |  Change Description |
+|---|---|---|---|
+| 2022-01-10  | 2.1  | Malika  | Removed the readme for GitShare|
+| 2020-08-26  | 2.0  | Lavanya | Moved lab to course repo in GitLab |
+|   |   |   |   |
+|   |   |   |   |
+
+
+## <h3 align="center"> © IBM Corporation 2020. All rights reserved. <h3/>
+
+
+
+<p style="text-align:center">
+    <a href="https://skills.network/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01" target="_blank">
+    <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/assets/logos/SN_web_lightmode.png" width="200" alt="Skills Network Logo"  />
+    </a>
+</p>
+
+# Tuples in Python
+
+
+Estimated time needed: **15** minutes
+    
+
+## Objectives
+
+After completing this lab you will be able to:
+
+* Perform the basics tuple operations in Python, including indexing, slicing and sorting
+
+<h2>Table of Contents</h2>
+<div class="alert alert-block alert-info" style="margin-top: 20px">
+    <ul>
+        <li>
+            <a href="#dataset">About the Dataset</a>
+        </li>
+        <li>
+            <a href="#tuple">Tuples</a>
+            <ul>
+                <li><a href="index">Indexing</a></li>
+                <li><a href="slice">Slicing</a></li>
+                <li><a href="sort">Sorting</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#escape">Quiz on Tuples</a>
+        </li>
+    </ul>
+ 
+</div>
+
+<hr>
+
+<h2 id="dataset">About the Dataset</h2>
+
+Imagine you received album recommendations from your friends and compiled all of the recommendations into a table, with specific information about each album.
+
+The table has one row for each movie and several columns:
+
+- **artist** - Name of the artist
+- **album** - Name of the album
+- **released_year** - Year the album was released
+- **length_min_sec** - Length of the album (hours,minutes,seconds)
+- **genre** - Genre of the album
+- **music_recording_sales_millions** - Music recording sales (millions in USD) on [SONG://DATABASE](http://www.song-database.com/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01)
+- **claimed_sales_millions** - Album's claimed sales (millions in USD) on [SONG://DATABASE](http://www.song-database.com/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01)
+- **date_released** - Date on which the album was released
+- **soundtrack** - Indicates if the album is the movie soundtrack (Y) or (N)
+- **rating_of_friends** - Indicates the rating from your friends from 1 to 10
+<br>
+<br>
+
+The dataset can be seen below:
+
+<font size="1">
+<table font-size:xx-small>
+  <tr>
+    <th>Artist</th>
+    <th>Album</th> 
+    <th>Released</th>
+    <th>Length</th>
+    <th>Genre</th> 
+    <th>Music recording sales (millions)</th>
+    <th>Claimed sales (millions)</th>
+    <th>Released</th>
+    <th>Soundtrack</th>
+    <th>Rating (friends)</th>
+  </tr>
+  <tr>
+    <td>Michael Jackson</td>
+    <td>Thriller</td> 
+    <td>1982</td>
+    <td>00:42:19</td>
+    <td>Pop, rock, R&B</td>
+    <td>46</td>
+    <td>65</td>
+    <td>30-Nov-82</td>
+    <td></td>
+    <td>10.0</td>
+  </tr>
+  <tr>
+    <td>AC/DC</td>
+    <td>Back in Black</td> 
+    <td>1980</td>
+    <td>00:42:11</td>
+    <td>Hard rock</td>
+    <td>26.1</td>
+    <td>50</td>
+    <td>25-Jul-80</td>
+    <td></td>
+    <td>8.5</td>
+  </tr>
+    <tr>
+    <td>Pink Floyd</td>
+    <td>The Dark Side of the Moon</td> 
+    <td>1973</td>
+    <td>00:42:49</td>
+    <td>Progressive rock</td>
+    <td>24.2</td>
+    <td>45</td>
+    <td>01-Mar-73</td>
+    <td></td>
+    <td>9.5</td>
+  </tr>
+    <tr>
+    <td>Whitney Houston</td>
+    <td>The Bodyguard</td> 
+    <td>1992</td>
+    <td>00:57:44</td>
+    <td>Soundtrack/R&B, soul, pop</td>
+    <td>26.1</td>
+    <td>50</td>
+    <td>25-Jul-80</td>
+    <td>Y</td>
+    <td>7.0</td>
+  </tr>
+    <tr>
+    <td>Meat Loaf</td>
+    <td>Bat Out of Hell</td> 
+    <td>1977</td>
+    <td>00:46:33</td>
+    <td>Hard rock, progressive rock</td>
+    <td>20.6</td>
+    <td>43</td>
+    <td>21-Oct-77</td>
+    <td></td>
+    <td>7.0</td>
+  </tr>
+    <tr>
+    <td>Eagles</td>
+    <td>Their Greatest Hits (1971-1975)</td> 
+    <td>1976</td>
+    <td>00:43:08</td>
+    <td>Rock, soft rock, folk rock</td>
+    <td>32.2</td>
+    <td>42</td>
+    <td>17-Feb-76</td>
+    <td></td>
+    <td>9.5</td>
+  </tr>
+    <tr>
+    <td>Bee Gees</td>
+    <td>Saturday Night Fever</td> 
+    <td>1977</td>
+    <td>1:15:54</td>
+    <td>Disco</td>
+    <td>20.6</td>
+    <td>40</td>
+    <td>15-Nov-77</td>
+    <td>Y</td>
+    <td>9.0</td>
+  </tr>
+    <tr>
+    <td>Fleetwood Mac</td>
+    <td>Rumours</td> 
+    <td>1977</td>
+    <td>00:40:01</td>
+    <td>Soft rock</td>
+    <td>27.9</td>
+    <td>40</td>
+    <td>04-Feb-77</td>
+    <td></td>
+    <td>9.5</td>
+  </tr>
+</table></font>
+
+<hr>
+
+<h2 id="tuple">Tuples</h2>
+
+In Python, there are different data types: string, integer, and float. These data types can all be contained in a tuple as follows:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesType.png" width="750" align="center">
+
+Now, let us create your first tuple with string, integer and float.
+
+# Create your first tuple
+
+tuple1 = ("disco",10,1.2 )
+tuple1
+The type of variable is a **tuple**. 
+
+# Print the type of the tuple you created
+
+type(tuple1)
+<h3 id="index">Indexing</h3>
+
+ Each element of a tuple can be accessed via an index. The following table represents the relationship between the index and the items in the tuple. Each element can be obtained by the name of the tuple followed by a square bracket with the index number:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesIndex.gif" width="750" align="center">
+
+We can print out each value in the tuple:
+
+# Print the variable on each index
+
+print(tuple1[0])
+print(tuple1[1])
+print(tuple1[2])
+We can print out the **type** of each value in the tuple:
+
+# Print the type of value on each index
+
+print(type(tuple1[0]))
+print(type(tuple1[1]))
+print(type(tuple1[2]))
+We can also use negative indexing. We use the same table above with corresponding negative values:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesNeg.png" width="750" align="center">
+
+We can obtain the last element as follows (this time we will not use the print statement to display the values):
+
+# Use negative index to get the value of the last element
+
+tuple1[-1]
+We can display the next two elements as follows:
+
+# Use negative index to get the value of the second last element
+
+tuple1[-2]
+# Use negative index to get the value of the third last element
+
+tuple1[-3]
+<h3 id="concate">Concatenate Tuples</h3>
+
+We can concatenate or combine tuples by using the **+** sign:
+
+# Concatenate two tuples
+
+tuple2 = tuple1 + ("hard rock", 10)
+tuple2
+We can slice tuples obtaining multiple values as demonstrated by the figure below:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesSlice.gif" width="750" align="center">
+
+<h3 id="slice">Slicing</h3>
+
+We can slice tuples, obtaining new tuples with the corresponding elements: 
+
+# Slice from index 0 to index 2
+
+tuple2[0:3]
+We can obtain the last two elements of the tuple:
+
+# Slice from index 3 to index 4
+
+tuple2[3:5]
+We can obtain the length of a tuple using the length command: 
+
+# Get the length of tuple
+
+len(tuple2)
+This figure shows the number of elements:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesElement.png" width="750" align="center">
+
+<h3 id="sort">Sorting</h3>
+
+ Consider the following tuple:
+
+# A sample tuple
+
+Ratings = (0, 9, 6, 5, 10, 8, 9, 6, 2)
+We can sort the values in a tuple and save it to a new tuple: 
+
+# Sort the tuple
+
+RatingsSorted = sorted(Ratings)
+RatingsSorted
+<h3 id="nest">Nested Tuple</h3>
+
+A tuple can contain another tuple as well as other more complex data types. This process is called 'nesting'. Consider the following tuple with several elements: 
+
+# Create a nest tuple
+
+NestedT =(1, 2, ("pop", "rock") ,(3,4),("disco",(1,2)))
+Each element in the tuple, including other tuples, can be obtained via an index as shown in the figure:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesNestOne.png" width="750" align="center">
+
+# Print element on each index
+
+print("Element 0 of Tuple: ", NestedT[0])
+print("Element 1 of Tuple: ", NestedT[1])
+print("Element 2 of Tuple: ", NestedT[2])
+print("Element 3 of Tuple: ", NestedT[3])
+print("Element 4 of Tuple: ", NestedT[4])
+We can use the second index to access other tuples as demonstrated in the figure:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesNestTwo.png" width="750" align="center">
+
+ We can access the nested tuples:
+
+# Print element on each index, including nest indexes
+
+print("Element 2, 0 of Tuple: ",   NestedT[2][0])
+print("Element 2, 1 of Tuple: ",   NestedT[2][1])
+print("Element 3, 0 of Tuple: ",   NestedT[3][0])
+print("Element 3, 1 of Tuple: ",   NestedT[3][1])
+print("Element 4, 0 of Tuple: ",   NestedT[4][0])
+print("Element 4, 1 of Tuple: ",   NestedT[4][1])
+We can access strings in the second nested tuples using a third index:
+
+# Print the first element in the second nested tuples
+
+NestedT[2][1][0]
+# Print the second element in the second nested tuples
+
+NestedT[2][1][1]
+ We can use a tree to visualise the process. Each new index corresponds to a deeper level in the tree:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesNestThree.gif" width="750" align="center">
+
+Similarly, we can access elements nested deeper in the tree with a third index:
+
+# Print the first element in the second nested tuples
+
+NestedT[4][1][0]
+# Print the second element in the second nested tuples
+
+NestedT[4][1][1]
+The following figure shows the relationship of the tree and the element <code>NestedT[4][1][1]</code>:
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesNestFour.gif" width="750" align="center">
+
+<h2 id="quiz">Quiz on Tuples</h2>
+
+Consider the following tuple:
+
+# sample tuple
+
+genres_tuple = ("pop", "rock", "soul", "hard rock", "soft rock", \
+                "R&B", "progressive rock", "disco") 
+genres_tuple
+Find the length of the tuple, <code>genres_tuple</code>:
+
+# Write your code below and press Shift+Enter to execute
+
+<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%202/images/TuplesQuiz.png" width="1100" align="center">
+
+<details><summary>Click here for the solution</summary>
+
+```python
+len(genres_tuple)
+```
+
+</details>
+
+Access the element, with respect to index 3: 
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+genres_tuple[3]
+
+```
+
+</details>
+
+Use slicing to obtain indexes 3, 4 and 5:
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+genres_tuple[3:6]
+
+```
+
+</details>
+
+Find the first two elements of the tuple <code>genres_tuple</code>:
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+genres_tuple[0:2]
+
+```
+
+</details>
+
+Find the first index of <code>"disco"</code>:
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+genres_tuple.index("disco")
+
+```
+
+</details>
+
+Generate a sorted List from the Tuple <code>C_tuple=(-5, 1, -3)</code>:
+
+# Write your code below and press Shift+Enter to execute
+
+<details><summary>Click here for the solution</summary>
+
+```python
+C_tuple = (-5, 1, -3)
+C_list = sorted(C_tuple)
+C_list
+
+```
+
+</details>
+
+## Author
+
+<a href="https://www.linkedin.com/in/joseph-s-50398b136/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork1005-2022-01-01" target="_blank">Joseph Santarcangelo</a>
+
+
+## Other contributors
+
+<a href="www.linkedin.com/in/jiahui-mavis-zhou-a4537814a">Mavis Zhou</a>
+
+
+## Change Log
+
+
+|  Date (YYYY-MM-DD) |  Version | Changed By  |  Change Description |
+|---|---|---|---|
+| 2022-01-10  | 2.1  | Malika  | Removed the readme for GitShare|
+| 2020-08-26  | 2.0  | Lavanya | Moved lab to course repo in GitLab |
+|   |   |   |   |
+|   |   |   |   |
+
+
+## <h3 align="center"> © IBM Corporation 2020. All rights reserved. <h3/>
